# mask_stats

./: .bumpversion.cfg  AUTHORS.rst  MANIFEST.in  Makefile  README.rst  outline.md  requirements.txt  setup.cfg  setup.py  tox.ini
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
src/mask_stats/: __init__.py  _overlap.py  _surface_distance.py  mask_stats.py  overlap.py  surface_distance.py
tests/: __init__.py  test_mask_stats.py
