[metadata]
name = mask_stats
keywords = mask_stats
version = 0.2.0
license = "MIT license",
description = Compute summary statistics between two binary masks.
long_description = file: README.rst
author = Yngve Mardal Moe
author_email = yngve.m.moe@gmail.com
url = https://github.com/yngvem/mask_stats
classifiers = 
	Development Status :: 2 - Pre-Alpha
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Natural Language :: English
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7

[options]
packages = find:
package_dir = 
	=src
include_package_data = True
install_requires = 
	numpy
	scipy
	tqdm

[options.packages.find]
where = src

[bumpversion]
current_version = 0.2.0
commit = True
tag = True

[bumpversion:file:setup.cfg]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:src/mask_stats/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bdist_wheel]
universal = 1

[flake8]
exclude = docs

